cif/org.eclipse.escet.cif.tests/tests/checks/ExprNoSpecificExprsCheckLevel5.cif.check.err
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 15, column 1: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 19, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 25, column 5: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 51, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 56, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 61, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 120, column 13: The switch expression has only one case, which is deprecated.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 127, column 13: The switch expression has only one case, which is deprecated.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 155, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 189, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 218, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 236, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 266, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 276, column 3: Duplicate state invariant.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 320, column 13: The switch expression has only one case, which is deprecated.
WARNING: File "checks/ExprNoSpecificExprsCheckLevel5.cif": Semantic warning at line 330, column 3: Duplicate state invariant.
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ----------------------------------------------------------------
  (1/4) A user-defined function reference is used as a data value.
  ----------------------------------------------------------------
   * In group "USER_DEF_FUNC_REFS":
     - invariant g(intF);
                   ^
     - invariant g(extF);
                   ^

  --------------------------------------------------------------------------
  (2/4) An external user-defined function reference is used as a data value.
  --------------------------------------------------------------------------
   * In group "USER_DEF_FUNC_REFS":
     - invariant g(extF);
                   ^

  -------------------------------------------------------------------------
  (3/4) An internal user-defined function local variable reference is used.
  -------------------------------------------------------------------------
   * In user-defined function "INT_USER_DEF_FUNC_LOCAL_VAR_REFS.f":
     - return v;
              ^

  --------------------------------------------------------------------------
  (4/4) An internal user-defined function reference is used as a data value.
  --------------------------------------------------------------------------
   * In group "USER_DEF_FUNC_REFS":
     - invariant g(intF);
                   ^
